# Optix-Render

./: CMakeLists.txt  File.cu  Marry_plane.mtl  README.md  Shaders.json  optixPT.cu  optixPT.optixir  optixTriangle.cu  optixTriangle.optixir  sampleConfig.h  source.cpp  volume.cu  volume.optixir
assets/: cornell_box.mtl  cornell_box_Marry.mtl  sphere.mtl
buffer/: CUDABuffer.h
geometry/: assimp_mesh.h  assimp_model.h  gasBuild.h  volume_vdb.h
material/: material.h  material_definition.h  volume_mat.h
pipline/: PipLine.h  shaders.h
ray/: ray.h  ray_impl.h
shaders/: Cook-Torrance.h  Disney-Brdf.h  device_vdb.h  intersection.h  optixPT.cu  rand_gen.h  shader_common.h  test.h
utils/: Params.h  config.h  optix7_math.h  test.cpp  utils.h  utils_gpu.h
